--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World: this is Lucas' personal project website</h1>
-<p>this is a new paragraph</p>
+<h1>Hello: this is Lucas' personal project website</h1>
+<p>I'll be using it to host completed projects and work, stay tuned!</p>
 </body>
 </html>
